# moon

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.txt  cmake_uninstall.cmake.in
cli/: CMakeLists.txt  musil.cpp
docs/: user_manual_v0.5.tex  user_manual_v0.51.tex
examples/: arrays.mu  basic.moon  break.mu  files.mu  if.mu  load.moon  logic.mu  math.mu  multifile.moon  music_demo.moon  perf_fib.moon  perf_loop.moon  procs.moon  reference.mu  strings.moon  while.mu
examples/basic/: for.mu  hello.mu  if.mu  inf_recursion.mu  perf_fib.mu
examples/music/: events.mu
examples/rtsound/: rt_sines_async.mu  sound_playback.mu
examples/scientific/: iris_pca_kmeans.mu  matrix_stress.mu
examples/signals/: add_reconstruction.mu  conv_reverb.mu  cross_synth.mu  features.mu  filters.mu  phase_vocoder.mu  stft_istft.mu  transients.mu
ide/: CMakeLists.txt  musil.icns  musil_ide.cpp
scripts/: release.sh
src/: CMakeLists.txt  core.h  moon.cpp  moon.h  music.mu  musil.cpp  musil.h  plotting.h  rtsound.h  scientific.h  scientific.mu  signals.h  signals.mu  stdlib.moon  stdlib.mu
tests/: test_arrays.moon  test_builtins.mu  test_closure.mu  test_signals.mu  test_stdlib.moon  test_wav.mu
work/: moon_1.cpp  test1.moon
